feat: Support latest version